url arreglada , propio miPerfil no propio perfil/slug

--- a/tallerwebi-base/src/main/webapp/WEB-INF/views/thymeleaf/miPerfil.html
+++ b/tallerwebi-base/src/main/webapp/WEB-INF/views/thymeleaf/miPerfil.html
@@ -112,7 +112,7 @@
 <script type="module" th:src="@{js/tema.js}"></script>
 <script type="module" th:src="@{js/login.js}"></script>
 <script type="module" th:src="@{js/nav.js}"></script>
-<script type="module" th:src="@{js/notificaciones.js}"></script>
+<script type="module" th:src="@{/js/notificaciones.js}"></script>
 <script type="module" th:src="@{js/publicaciones.js}"></script>
 </body>
 </html>
