se achica controller en mi perfil, se cambia manera de manejar scrip publicaciones y notificaciones en home y perfil

--- a/tallerwebi-base/src/main/webapp/WEB-INF/views/thymeleaf/home.html
+++ b/tallerwebi-base/src/main/webapp/WEB-INF/views/thymeleaf/home.html
@@ -106,7 +106,7 @@
         </div>
     </aside>
 </main>
-<script type="module" th:src="@{/js/publicaciones.js}"></script>
+<script th:src="@{/js/publicaciones.js}"></script>
 <script th:src="@{/js/notificaciones.js}"></script>
 <script type="module" th:src="@{js/tema.js}"></script>
 
