--- a/tallerwebi-base/src/main/webapp/WEB-INF/views/thymeleaf/miPerfil.html
+++ b/tallerwebi-base/src/main/webapp/WEB-INF/views/thymeleaf/miPerfil.html
@@ -113,6 +113,6 @@
 <script type="module" th:src="@{js/login.js}"></script>
 <script type="module" th:src="@{js/nav.js}"></script>
 <script type="module" th:src="@{/js/notificaciones.js}"></script>
-<script type="module" th:src="@{js/publicaciones.js}"></script>
+<script th:src="@{/js/publicaciones.js}"></script>
 </body>
 </html>
