--- a/tallerwebi-base/src/main/webapp/WEB-INF/views/thymeleaf/templates/nav.html
+++ b/tallerwebi-base/src/main/webapp/WEB-INF/views/thymeleaf/templates/nav.html
@@ -8,6 +8,12 @@
             <li>
                 <button id="btn-tema" class="boton-tema"><img class="isologo" th:src="@{/imagenes/modo-oscuro.png}"></button>
             </li>
+            <li>
+                <form action="/buscarPersona" method="get">
+                    <input type="search" name="query" placeholder="Buscar persona..." required>
+                    <button type="submit">Buscar</button>
+                </form>
+            </li>
             <li class="menu-notificaciones">
                 <a href="#" id="btn-notificaciones" th:attr="data-user-id=${usuario.id}">
                     Notificaciones
