--- a/tallerwebi-base/src/main/webapp/WEB-INF/views/thymeleaf/notificaciones.html
+++ b/tallerwebi-base/src/main/webapp/WEB-INF/views/thymeleaf/notificaciones.html
@@ -108,6 +108,7 @@
                     <div th:if="${n.publicacion == null}">
                         <span th:text="${n.mensaje}"></span>
                     </div>
+                    <!-- falta el boton de aceptar y eso-->
                 </li>
             </ul>
         </div>
