--- a/tallerwebi-base/src/main/webapp/WEB-INF/views/thymeleaf/home.html
+++ b/tallerwebi-base/src/main/webapp/WEB-INF/views/thymeleaf/home.html
@@ -111,6 +111,7 @@
 </main>
 <script th:src="@{/js/publicaciones.js}"></script>
 <script th:src="@{/js/notificaciones.js}"></script>
+<script th:src="@{/js/buscarPersona.js}"></script>
 <script type="module" th:src="@{js/tema.js}"></script>
 
 </body>
